--- a/index.html
+++ b/index.html
@@ -201,14 +201,9 @@
         <div class="container">
 
             <div class="row text-center">
-                <p>Copyright © 2017 All rights reserved</p>
+                <p>ИЛЬЯ КАКАХА</p>
             </div>
 
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <h1>ИЛЬЯ КАКАХА</h1>
         </div>
     </div>
 
