--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -64,78 +65,145 @@
         <div class="row">
             <div class="container">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#">Элемент 1 <span class="badge">14</span></a></li>
-                    <li><a href="#">Элемент 2 <span class="badge">231</span></a></li>
-                    <li><a href="#">Элемент 3 <span class="badge">56</span></a></li>
-                    <li><a href="#">Элемент 4 <span class="badge">45</span></a></li>
+                    <li class=active><a href="#tab-1" data-toggle="tab">Элемент 1 <span class="badge">10</span></a></li>
+                    <li><a href="#tab-2" data-toggle="tab">Элемент 2 <span class="badge">2</span></a></li>
+                    <li><a href="#tab-3" data-toggle="tab">Элемент 3 <span class="badge">45</span></a></li>
+                    <li><a href="#tab-3" data-toggle="tab">Элемент 4 <span class="badge">23</span></a></li>
                 </ul>
+                <div class="tab-content">
+                    <div class="row tab-pane active" id="tab-1">
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div>
+                                <button class="btn btn-warning">Подробнее</button>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4">
+                            <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
+                                <div class="caption">
+                                    <h2>Название статьи</h2>
+                                    <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
+                                </div><button class="btn btn-warning">Подробнее</button></div>
+                        </div>
+                    </div>
+                    <div class="row tab-pane" id="tab-2">
+                        <div id="carousel" class="carousel slide">
+                            <!--индикаторы-->
+
+                            <ol class="carousel-indicators">
+                                <li class="active" data-target="#carousel" data-slide="0"></li>
+                                <li data-target="#carousel" data-slide="1"></li>
+                                <li data-target="#carousel" data-slide="2"></li>
+                            </ol>
+
+                            <!--Слайды-->
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <img src="1.jpg" alt="">
+                                    <div class="carousel-caption">
+                                        <h3>СМ Сила!!!</h3>
+                                        <p>Все ребята в сборе</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <img src="2.jpg" alt="">
+                                    <div class="carousel-caption">
+                                        <h3>СМ Сила!!!</h3>
+                                        <p>Обложка нового клипа</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <img src="3.jpg" alt="">
+                                    <div class="carousel-caption">
+                                        <h3>СМ Сила!!!</h3>
+                                        <p>Обычный день СМовца</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--стрелки переключения-->
+                            <a href="#carousel" class="left carousel-control" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+                            <a href="#carousel" class="right carousel-control" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+
+                        </div>
+                        <div class="container">
+                            <div class="col-sm-3"></div>
+                            <div class="col-sm-7">
+                                <h1>См в наших сердцах <i class="fa fa-heart" aria-hidden="true"></i></h1>
+                            </div>
+                            <div class="col-sm-2"></div>
+                        </div>
+                        <div class="container">
+                            <p>12 марта 2016 года была создана беседа под названием “Гуляем”, которая позже была переименована в “Клуб СМ”. В состав этой беседы вошли 5 человек – 5 друзей, одноклассников, ценителей табака и алкоголя. На протяжении всего 2016 года мы вместе провели очень много времени и это было незабываемо. Хотелось бы упомянуть самые яркие моменты 2016 года. Самый первый это конечно же Новогодняя ночь. Мы все вместе очень весело провели время в бане у Алексея и затем перекочевали в дом к Кате. В эту ночь произошло множество интересных моментов, в том числе самый для меня запомнившийся – первая сигарилла. Следующее событие, которое мы провели всем клубом – выпускной. Это был очень запоминающийся не лишенный своей атмосферы праздник. Было множество запомнившихся моментов, которые можно долго перечислять и рассказывать. После этого события можно отметить открытие пекарни. Пусть это было не со всем клубом, но все-таки это было очень круто и осталось в памяти навсегда. Следующее событие – это день рождения Ильи. Тогда мы попробовали очень классные сигариллы Пантера, покатались на машине и просто очень круто провели время. Это был блестящий год – один из самых лучших, наполненный событиями и открытиями. Мы нашли новых друзей, попробовали много разного и побывали во многих местах.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 hidden-xs"></div>
+                </div>
             </div>
         </div>
-        <!--Статьи-->
-        <div class="row">
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
+
+    </div>
+
+    <div class="tab-content">
+        <div class="container">
+            <div class="row" id="tab-1">
             </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
-            <div class="col-xs-6 col-sm-4">
-                <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
-                    <div class="caption">
-                        <h2>Название статьи</h2>
-                        <p>Статья́ — это жанр журналистики, в котором автор ставит задачу проанализировать общественные ситуации, процессы, явления, прежде всего с точки зрения закономерностей, лежащих в их основе</p>
-                    </div><button class="btn btn-warning">Подробнее</button></div>
-            </div>
+            <div class="row" id="tab-2"></div>
         </div>
     </div>
     <!--Футер-->
