--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <li><a href="#tab-3" data-toggle="tab">Элемент 4 <span class="badge">23</span></a></li>
                 </ul>
                 <div class="tab-content">
-                    <div class="row tab-pane active" id="tab-1">
+                    <div class="row tab-pane active fade" id="tab-1">
                         <div class="col-xs-6 col-sm-4">
                             <div class="thumbnail"><img src="http://placehold.it/400x240" alt="">
                                 <div class="caption">
@@ -138,7 +138,7 @@
                                 </div><button class="btn btn-warning">Подробнее</button></div>
                         </div>
                     </div>
-                    <div class="row tab-pane" id="tab-2">
+                    <div class="row tab-pane fade" id="tab-2">
                         <div id="carousel" class="carousel slide">
                             <!--индикаторы-->
 
